5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1747_3090.log
== TEST (2019-05-16 11:29:30) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m > 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + 1
	i = i + 1 
if (soma < 0):
	print("Abaixo")
else:
	if(m == soma):
		print("Inicial")
	print("Acima")
-- OUTPUT:
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:51) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m > 0):
	soma = soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
if (soma < 0):
	print("Abaixo")
else:
	if(m == soma):
		print("Inicial")
	print("Acima")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:18) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m > 0):
	soma = soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
	if (soma < 0):
		print("Abaixo")
	else:
		if(m == soma):
			print("Inicial")
		print("Acima")
-- ERROR:
File "XXXX", line 10
    if (soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:41) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m > 0):
	soma = soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
	if (soma < 0):
		print("Abaixo")
	else:
		if(m == soma):
			print("Inicial")
		print("Acima")
-- ERROR:
File "XXXX", line 10
    if (soma < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:55) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m > 0):
	soma = soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
if (soma < 0):
	print("Abaixo")
else:
	if(m == soma):
		print("Inicial")
	print("Acima")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:21) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 
fim = k - 1
while (m != 0):
	soma =soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
if(soma > 0):
	print("Acima")
	if(m == fim):	
		print("Inicial")
else:
	print("Abaixo")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    fim = k - 1
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:35:50) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	soma =soma + 1
	i = i + 1 
	m = int(input("Movimentos da lagartixa: "))
print(soma)
if(soma > 0):
	print("Acima")
	if(m == i):	
		print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:07) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
	if(m == i):	
		print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:37:28) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
	if(m == i):	
		print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:38:12) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma != 0 and soma > 0):
	print("Acima")
	if(m == i):	
		print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:03) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma != 0 and soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:16) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma != 0 and soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:28) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma =soma + 1
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
10
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:53) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
18
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:39:58) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
18
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:11) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
18
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:40:32) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- EXECUTION TIME:
0.211627
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
18
Acima
Abaixo
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
-24
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
-30
Abaixo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:40:43) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 

print(soma)
if(soma > 0):
	print("Acima")
if(m == i):	
	print("Inicial")
else:
	print("Abaixo")
-- OUTPUT:
18
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:26) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 
	if(soma > 0):
		print("Acima")
	if(m == i):	
		print("Inicial")
	else:
		print("Abaixo")
-- OUTPUT:
Acima
Inicial
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:39) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 
	if(soma > 0):
		print("Acima")
	if(m == i):	
		print("Inicial")
	else:
		print("Abaixo")
print(soma)
-- OUTPUT:
Acima
Inicial
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:41:44) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 
	if(soma > 0):
		print("Acima")
	if(m == i):	
		print("Inicial")
	else:
		print("Abaixo")
print(soma)
-- OUTPUT:
Acima
Inicial
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
Acima
Abaixo
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:42:25) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m
	i = i + 1 
	if(soma > 0):
		print("Acima")
	else:
		print("Abaixo")
	if(m == i):	
		print("Inicial")
	
print(soma)
-- OUTPUT:
Acima
Inicial
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:35) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	if(soma > 0):
		print("Acima")
	if(soma < 0):
		print("Abaixo")
	if(m == i):	
		print("Inicial")
print(soma)
-- OUTPUT:
Inicial
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:43:56) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0 or m ==0):
	m = int(input("MOvimentos da lagartixa: "))
	if(soma > 0):
		print("Acima")
	if(soma < 0):
		print("Abaixo")
	if(m == i):	
		print("Inicial")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:44:02) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0 or m ==0):
	m = int(input("MOvimentos da lagartixa: "))
	if(soma > 0):
		print("Acima")
	if(soma < 0):
		print("Abaixo")
	if(m == i):	
		print("Inicial")
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:12) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
	
	if(soma > 0):
		print("Acima")
	if(soma < 0):
		print("Abaixo")
	if(m == i):	
		print("Inicial")
print(soma)
-- OUTPUT:
Acima
Inicial
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:31) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")
print(soma)
-- OUTPUT:
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:45:41) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")
print(soma)
-- OUTPUT:
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:03) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")
print(soma)
-- OUTPUT:
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:46:21) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")
print(soma)
-- OUTPUT:
Acima
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:00) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:37) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:47:52) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:07) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:35) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:48:57) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
18
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:02) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("MOvimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
18
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:49:37) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m 
	i = i - 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
18
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:03) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0 
soma = 0 

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
18
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:30) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 1
soma = 0 

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
18
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:50:57) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 1 

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
2
3
4
5
6
7
8
9
19
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:22) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma =  

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + 1 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- ERROR:
File "XXXX", line 3
    soma =  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:25) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 0 

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + 1 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:39) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + 1 
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:51:51) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
2
3
4
5
6
7
8
9
19
19
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:18) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
0
1
2
3
4
5
6
7
17
17
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:32) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
	print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
0
1
2
3
4
5
6
7
17
17
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:52:39) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
17
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:52:53) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- EXECUTION TIME:
0.234765
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:
17
Acima
-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
-25
Abaixo
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
-31
Abaixo
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:13) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
17
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:47) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = -1

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
17
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:02) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 0

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:06) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 0

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:22) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 0
soma = 0

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:48) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 1
soma = 0

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:54:57) 
-- CODE:
m = int(input("Movimentos da lagartixa: "))
i = 1

soma = 0

while (m != 0):
	m = int(input("Movimentos da lagartixa: "))
	soma = soma + m
	i = i + 1
print(soma)
if(soma > 0):
	print("Acima")
if(soma < 0 and soma !=0):
	print("Abaixo")
if(m == i):	
	print("Inicial")

-- OUTPUT:
18
Acima
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
